--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -5,14 +5,15 @@
     name: 'RoutingIntMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'bottom'
+        anchor_y: 'top'
         BottomMenuBar:
             id: _Bottom_Menu_Bar
+            main_menu_root: root
             size_hint: 1, None
             height: 50
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'top'
+        anchor_y: 'bottom'
         RoutingIntMenuButtons:
             id: _Routing_Int_Conf_Menu_Buttons_
             main_menu_root: root
