--- a/MainMenu.kv
+++ b/MainMenu.kv
@@ -1,26 +1,32 @@
 #:kivy 1.11.1
 
+#Imports the MainMenu file 
+
 #:import MainMenu MainMenu
+
+
+
+#Creates the Main Menu Screen and layout the widgets as desired
 
 <MainMenu@Screen>:
     name: 'MainMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'bottom'
+        anchor_y: 'top'
         BottomMenuBar:
             id: _Bottom_Menu_Bar
+            main_menu_root: root
             size_hint: 1, None
             height: 50
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'top'
+        anchor_y: 'bottom'
         MainMenuButtons:
             id: _Main_Menu_Buttons_
             main_menu_root: root
             size_hint: 0.9, None
             padding: 50
             height: root.height - _Bottom_Menu_Bar.height
-
 
 
 <MainMenuButtons>:
