--- a/Menus/NetMonAndManageMenu.kv
+++ b/Menus/NetMonAndManageMenu.kv
@@ -5,14 +5,15 @@
     name: 'NetMonMenuScreen'
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'bottom'
+        anchor_y: 'top'
         BottomMenuBar:
             id: _Bottom_Menu_Bar
+            main_menu_root: root
             size_hint: 1, None
             height: 50
     AnchorLayout:
         anchor_x: 'center'
-        anchor_y: 'top'
+        anchor_y: 'bottom'
         NetMonMenuButtons:
             id: _Net_Mon_Menu_Buttons_
             main_menu_root: root
