Added Placeholder screens for Basic Conf Features
    Hostname
    Domain Name
    Reload Device

Added functions on Basic Conf Buttons to Navigate to new screens

Renamed BasicConfScreen to BasicConfMenuScreen to fit in with naming scheme in use

--- a/MenuManager.kv
+++ b/MenuManager.kv
@@ -5,6 +5,10 @@
 
 <MenuManager>:
     transition: FadeTransition()
+
+    #Main Menu and Sub Menu Screens
+
+    
     MainMenu:
     BasicConfMenu:
     IntConfMenu:
@@ -15,8 +19,11 @@
     NetScanMenu:
     NetTestingMenu:
 
+    #Basic Conf Menu Screens
 
-		
+    BasicConfHostname:
+	BasicConfDomain:
+    BasicConfReload:
 		
 		
 		
