Refined the basic configuration function menus
    Converted menu layouts from box to grid

     Added labels and text inputs into layouts

     Change Anchor for basic conf layouts from anchor_y 'bottom' to 'center' to allow for execute button to be situated on bottom

     Removed Padding and reactive height settings from Basic Conf layouts

Created 2 custom widgets to reduce code reuse within the MainApplication.kv

     Execute Button
     IPv4 Address Text Input

Created a placeholder function to go back to previous screen and linked function to previous screen button on Menu Bar

Removed MenuBar.kv as it will not be used for the foreseeable future

Created a ConnectDevices.py file to store a function to securely connect to devices that can be imported in order to reduce code reuse.

--- a/BottomMenuBar.kv
+++ b/BottomMenuBar.kv
@@ -12,6 +12,7 @@
         on_press: root.ReturnToMainMenu(*args)
     Button:
         text: 'Go Back a Level' 
+        on_press: root.PreviousScreen(*args)
     Button:
         text: 'Options'
     Button:
