--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -1,6 +1,17 @@
 #:kivy 1.11.1
 
 
+#Create a Custom Widget for an Execute Button
 
-           
+<Execute@Button>:
+    text: 'Execute'
+    size_hint: 0.5, 0.1
+
+#Create a Custome Widget for IPv4 Address Text Input
+
+<IPv4AddressInput@TextInput>:    
+    hint_text:'IPv4 Address'
+    multiline: False
+    size_hint_y: None
+    height: '32dp'
  
