Renamed BottomMenuBar to MenuBar
Modified all refrences to BottomMenuBar to MenuBar throughout project

This has be done to be inline with it's new placement within the GUI

--- a/Menus/BasicConfMenu.kv
+++ b/Menus/BasicConfMenu.kv
@@ -7,8 +7,8 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'top'
-        BottomMenuBar:
-            id: _Bottom_Menu_Bar
+        MenuBar:
+            id: _Menu_Bar
             main_menu_root: root
             size_hint: 1, None
             height: 50
@@ -20,7 +20,7 @@
             main_menu_root: root
             size_hint: 0.9, None
             padding: 50
-            height: root.height - _Bottom_Menu_Bar.height
+            height: root.height - _Menu_Bar.height
 
 
 
@@ -47,8 +47,8 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'top'
-        BottomMenuBar:
-            id: _Bottom_Menu_Bar
+        MenuBar:
+            id: _Menu_Bar
             main_menu_root: root
             size_hint: 1, None
             height: 50
@@ -60,7 +60,7 @@
             main_menu_root: root
             size_hint: 0.9, None
             #padding: 50
-            #height: root.height - _Bottom_Menu_Bar.height - _Execute_Button_.height
+            #height: root.height - _Menu_Bar.height - _Execute_Button_.height
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
@@ -106,8 +106,8 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'top'
-        BottomMenuBar:
-            id: _Bottom_Menu_Bar
+        MenuBar:
+            id: _Menu_Bar
             main_menu_root: root
             size_hint: 1, None
             height: 50     
@@ -156,8 +156,8 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'top'
-        BottomMenuBar:
-            id: _Bottom_Menu_Bar
+        MenuBar:
+            id: _Menu_Bar
             main_menu_root: root
             size_hint: 1, None
             height: 50
