--- a/Menus/NetTestingMenu.kv
+++ b/Menus/NetTestingMenu.kv
@@ -5,8 +5,8 @@
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'top'
-        BottomMenuBar:
-            id: _Bottom_Menu_Bar
+        MenuBar:
+            id: _Menu_Bar
             main_menu_root: root
             size_hint: 1, None
             height: 50
@@ -18,7 +18,7 @@
             main_menu_root: root
             size_hint: 0.9, None
             padding: 50
-            height: root.height - _Bottom_Menu_Bar.height
+            height: root.height - _Menu_Bar.height
 
 
 
