--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -1,5 +1,6 @@
 #:kivy 1.11.1
 
+#:import RoutingIntMenu RoutingIntMenu
 
 <RoutingIntMenu@Screen>:
     name: 'RoutingIntMenuScreen'
@@ -23,16 +24,134 @@
 
 
 
-<RoutingIntMenuButtons@BoxLayout>:
+<RoutingIntMenuButtons>:
     orientation: 'vertical'
     padding: 5
     spacing: 2
     Button:
         text: 'Configure A Static Route'
+        on_press: root.RoutingIntStaticRouteButton(*args)
     Button:
         text: 'Configure A Default Route'
+        on_press: root.RoutingIntDefaultRouteButton(*args)
     Button:
         text: 'Configure A Default Gateway'
+        on_press: root.RoutingIntDefaultGatewayButton(*args)
+
+
+
+<RoutingIntStaticRoute@Screen>:
+    name: 'RoutingIntStaticRouteScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        RoutingIntStaticRouteLayout:
+            id: _Routing_Int_Static_Route_Layout_
+            main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+                    
+<RoutingIntStaticRouteLayout>:
+    orientation: 'vertical'
+    cols: 2
+    padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address of Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
+
+
+
+<RoutingIntDefaultRoute@Screen>:
+    name: 'RoutingIntDefaultRouteScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        RoutingIntDefaultRouteLayout:
+            id: _Routing_Int_Default_Route_Layout_
+            main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+                    
+<RoutingIntDefaultRouteLayout>:
+    orientation: 'vertical'
+    cols: 2
+    padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address of Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
+
+
+
+
+<RoutingIntDefaultGateway@Screen>:
+    name: 'RoutingIntDefaultGatewayScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        RoutingIntDefaultGatewayLayout:
+            id: _Routing_Int_Default_Gateway_Layout_
+            main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+                    
+<RoutingIntDefaultGatewayLayout>:
+    orientation: 'vertical'
+    cols: 2
+    padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address of Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
 
 
         
