--- a/MenuManager.kv
+++ b/MenuManager.kv
@@ -24,7 +24,47 @@
     BasicConfHostname:
 	BasicConfDomain:
     BasicConfReload:
-		
+
+
+    #Interface Conf Menu Screens
+
+    IntConfAssignIPv4:
+    IntConfEthernetInt:
+
+
+    #Routing Interface Menu Screens
+
+    RoutingIntStaticRoute:
+    RoutingIntDefaultRoute:
+    RoutingIntDefaultGateway:
+
+
+    #Security Conf Menu Screens
+
+    SecurityConfLocalUsernameDatabase:
+    SecurityConfPasswordEncryption:
+    SecurityConfAuxVtyConLines:
+
+
+    #Net Monitoring Menu Screens
+
+    NetMonSpanConf:
+
+
+    #Device Info And Change Control Menu Screens
+
+    DeviceInfoPollAndExtract:
+	DeviceInfoChangeControl:	
+
+
+    #Net Scanning And Traffic Monitoring Menu Screens
+
+    NetScanWireshark:
+
+
+    #Net Testing Menu Screens
+
+    NetTestingPing:
 		
 		
 		
