--- a/Menus/NetScanningAndTrafficMonMenu.kv
+++ b/Menus/NetScanningAndTrafficMonMenu.kv
@@ -1,5 +1,6 @@
 #:kivy 1.11.1
 
+#:import NetScanningAndTrafficMonMenu NetScanningAndTrafficMonMenu
 
 <NetScanMenu@Screen>:
     name: 'NetScanMenuScreen'
@@ -23,13 +24,51 @@
 
 
 
-<NetScanMenuButtons@BoxLayout>:
+<NetScanMenuButtons>:
     orientation: 'vertical'
     padding: 5
     spacing: 2
     Button:
         text: 'Monitor Network Traffic With Wireshark'
+        on_press: root.NetScanWiresharkButton(*args)
 
+
+
+<NetScanWireshark@Screen>:
+    name: 'NetScanWiresharkScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        NetScanWiresharkLayout:
+            id: _Net_Scan_Wireshark_Layout_
+            main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+                    
+<NetScanWiresharkLayout>:
+    orientation: 'vertical'
+    cols: 2
+    padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address of Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
 
 
         
