--- a/Menus/NetTestingMenu.kv
+++ b/Menus/NetTestingMenu.kv
@@ -1,5 +1,7 @@
 #:kivy 1.11.1
 
+#:import NetTestingMenu NetTestingMenu
+
 <NetTestingMenu@Screen>:
     name: 'NetTestingMenuScreen'
     AnchorLayout:
@@ -22,13 +24,52 @@
 
 
 
-<NetTestingMenuButtons@BoxLayout>:
+<NetTestingMenuButtons>:
     orientation: 'vertical'
     padding: 5
     spacing: 2
     Button:
         text: 'Ping A Network Device'
+        on_press: root.NetTestingPingButton(*args)
 
+
+
+
+<NetTestingPing@Screen>:
+    name: 'NetTestingPingScreen'
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'top'
+        MenuBar:
+            id: _Menu_Bar
+            main_menu_root: root
+            size_hint: 1, None
+            height: 50
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'center'
+        NetTestingPingLayout:
+            id: _Net_Testing_Ping_Layout_
+            main_menu_root: root
+            size_hint: 0.9, None
+    AnchorLayout:
+        anchor_x: 'center'
+        anchor_y: 'bottom'
+        padding: 5
+        Execute:
+            id: _Execute_Button_
+                    
+<NetTestingPingLayout>:
+    orientation: 'vertical'
+    cols: 2
+    padding: 5
+    spacing: 2
+    Label: 
+        text: 'Enter IPv4 Address of Device'
+        size_hint_y: None
+        height: IPv4AddressTextInput.height
+    IPv4AddressInput:
+        id: IPv4AddressTextInput
 
 
         
