--- a/Menus/DeviceInfoAndChangeControlMenu.kv
+++ b/Menus/DeviceInfoAndChangeControlMenu.kv
@@ -39,7 +39,7 @@
         
 		
 		
-<DeviceInfoPollAndExtract@Screen>:
+<DeviceInfoPollAndExtract>:
     name: 'DeviceInfoPollAndExtractScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -67,7 +67,7 @@
 
 
         
-<DeviceInfoPollAndExtractLayout>:
+<DeviceInfoPollAndExtractLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -81,7 +81,7 @@
 
 
 
-<DeviceInfoChangeControl@Screen>:
+<DeviceInfoChangeControl>:
     name: 'DeviceInfoChangeControlScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -109,7 +109,7 @@
 
 
         
-<DeviceInfoChangeControlLayout>:
+<DeviceInfoChangeControlLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
