--- a/Menus/IntConfMenu.kv
+++ b/Menus/IntConfMenu.kv
@@ -40,7 +40,7 @@
 
 
 
-<IntConfAssignIPv4@Screen>:
+<IntConfAssignIPv4>:
     name: 'IntConfAssignIPv4Screen'
     AnchorLayout:
         anchor_x: 'center'
@@ -64,7 +64,7 @@
         Execute:
             id: _Execute_Button_
                     
-<IntConfAssignIPv4Layout>:
+<IntConfAssignIPv4Layout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -81,7 +81,7 @@
 
 
 
-<IntConfEthernetInt@Screen>:
+<IntConfEthernetInt>:
     name: 'IntConfEthernetIntScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -109,7 +109,7 @@
 
 
         
-<IntConfEthernetIntLayout>:
+<IntConfEthernetIntLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
