--- a/Menus/NetMonAndManageMenu.kv
+++ b/Menus/NetMonAndManageMenu.kv
@@ -34,7 +34,7 @@
 
 
 
-<NetMonSpanConf@Screen>:
+<NetMonSpanConf>:
     name: 'NetMonSpanConfScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -58,7 +58,7 @@
         Execute:
             id: _Execute_Button_
                     
-<NetMonSpanConfLayout>:
+<NetMonSpanConfLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
