--- a/Menus/NetScanningAndTrafficMonMenu.kv
+++ b/Menus/NetScanningAndTrafficMonMenu.kv
@@ -34,7 +34,7 @@
 
 
 
-<NetScanWireshark@Screen>:
+<NetScanWireshark>:
     name: 'NetScanWiresharkScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -58,7 +58,7 @@
         Execute:
             id: _Execute_Button_
                     
-<NetScanWiresharkLayout>:
+<NetScanWiresharkLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
