--- a/Menus/NetTestingMenu.kv
+++ b/Menus/NetTestingMenu.kv
@@ -35,7 +35,7 @@
 
 
 
-<NetTestingPing@Screen>:
+<NetTestingPing>:
     name: 'NetTestingPingScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -59,7 +59,7 @@
         Execute:
             id: _Execute_Button_
                     
-<NetTestingPingLayout>:
+<NetTestingPingLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
