--- a/Menus/RoutingIntMenu.kv
+++ b/Menus/RoutingIntMenu.kv
@@ -40,7 +40,7 @@
 
 
 
-<RoutingIntStaticRoute@Screen>:
+<RoutingIntStaticRoute>:
     name: 'RoutingIntStaticRouteScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -64,7 +64,7 @@
         Execute:
             id: _Execute_Button_
                     
-<RoutingIntStaticRouteLayout>:
+<RoutingIntStaticRouteLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -78,7 +78,7 @@
 
 
 
-<RoutingIntDefaultRoute@Screen>:
+<RoutingIntDefaultRoute>:
     name: 'RoutingIntDefaultRouteScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -102,7 +102,7 @@
         Execute:
             id: _Execute_Button_
                     
-<RoutingIntDefaultRouteLayout>:
+<RoutingIntDefaultRouteLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -117,7 +117,7 @@
 
 
 
-<RoutingIntDefaultGateway@Screen>:
+<RoutingIntDefaultGateway>:
     name: 'RoutingIntDefaultGatewayScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -141,7 +141,7 @@
         Execute:
             id: _Execute_Button_
                     
-<RoutingIntDefaultGatewayLayout>:
+<RoutingIntDefaultGatewayLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
