--- a/Menus/SecurityConfMenu.kv
+++ b/Menus/SecurityConfMenu.kv
@@ -42,7 +42,7 @@
 
 
 
-<SecurityConfLocalUsernameDatabase@Screen>:
+<SecurityConfLocalUsernameDatabase>:
     name: 'SecurityConfLocalUsernameDatabaseScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -66,7 +66,7 @@
         Execute:
             id: _Execute_Button_
                     
-<SecurityConfLocalUsernameDatabaseLayout>:
+<SecurityConfLocalUsernameDatabaseLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -81,7 +81,7 @@
 
 
 
-<SecurityConfPasswordEncryption@Screen>:
+<SecurityConfPasswordEncryption>:
     name: 'SecurityConfPasswordEncryptionScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -105,7 +105,7 @@
         Execute:
             id: _Execute_Button_
                     
-<SecurityConfPasswordEncryptionLayout>:
+<SecurityConfPasswordEncryptionLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
@@ -121,7 +121,7 @@
 
 
 
-<SecurityConfAuxVtyConLines@Screen>:
+<SecurityConfAuxVtyConLines>:
     name: 'SecurityConfAuxVtyConLinesScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -145,7 +145,7 @@
         Execute:
             id: _Execute_Button_
                     
-<SecurityConfAuxVtyConLinesLayout>:
+<SecurityConfAuxVtyConLinesLayout@GridLayout>:
     orientation: 'vertical'
     cols: 2
     padding: 5
