--- a/MenuManager.kv
+++ b/MenuManager.kv
@@ -6,7 +6,9 @@
 <MenuManager>:
     transition: FadeTransition()
 
-    #Main Menu and Sub Menu Screens
+
+
+        #Main Menu and Sub Menu Screens
 
     
     MainMenu:
@@ -19,52 +21,67 @@
     NetScanMenu:
     NetTestingMenu:
 
-    #Basic Conf Menu Screens
+
+
+        #Basic Conf Menu Screens
 
     BasicConfHostname:
 	BasicConfDomain:
     BasicConfReload:
 
 
-    #Interface Conf Menu Screens
+
+        #Interface Conf Menu Screens
 
     IntConfAssignIPv4:
     IntConfEthernetInt:
 
 
-    #Routing Interface Menu Screens
+
+        #Routing Interface Menu Screens
 
     RoutingIntStaticRoute:
     RoutingIntDefaultRoute:
     RoutingIntDefaultGateway:
 
 
-    #Security Conf Menu Screens
+
+        #Security Conf Menu Screens
 
     SecurityConfLocalUsernameDatabase:
     SecurityConfPasswordEncryption:
     SecurityConfAuxVtyConLines:
 
 
-    #Net Monitoring Menu Screens
+
+        #Net Monitoring Menu Screens
 
     NetMonSpanConf:
 
 
-    #Device Info And Change Control Menu Screens
+
+        #Device Info And Change Control Menu Screens
 
     DeviceInfoPollAndExtract:
 	DeviceInfoChangeControl:	
 
 
-    #Net Scanning And Traffic Monitoring Menu Screens
+
+        #Net Scanning And Traffic Monitoring Menu Screens
 
     NetScanWireshark:
 
 
-    #Net Testing Menu Screens
+
+        #Net Testing Menu Screens
 
     NetTestingPing:
+
+
+
+        #Set storage location Screen
+
+    SetStorageLocation:
 		
 		
 		
