--- a/Menus/BasicConfMenu.kv
+++ b/Menus/BasicConfMenu.kv
@@ -67,7 +67,7 @@
         padding: 5
         Execute:
             id: _Execute_Button_
-            on_press: root.Execute(*args)
+            on_press: root.BasicConfHostnameExecute(*args)
             
 
 
